# Trace-Optimization

./: .env.example  .gitignore  CLAUDE.md  README.md  __init__.py  _util.py  agents.py  brain.py  demo.py  demo_brain.py  demo_debug.py  demo_extensive.py  demo_general.py  demo_inner.py  demo_large.py  demo_session.py  demo_vibe.py  forecast.py  pipeline.py  pyproject.toml  requirements.txt  tools.py  use.py  vibe.py  vibe_session.py
bench/: _common.py  run_fanoutqa.py  run_musique.py
eval/: ablation_reasoning.py  analyze.py  benchmark_comparison.py  component_forecast.py  eval_dev_learning.py  eval_extensive.py  eval_fires.py  eval_haiku_intensive.py  eval_hard.py  eval_learn.py  eval_project.py  eval_real_world.py  eval_v3_vibe.py  eval_vibe.py  gen_balanced.py  gen_gsm8k.py  generalize.py  intervention_policy.py  large_run_charts.py  learned_repr.py  learning_diagnostic.py  mvp_failure_forecast.py  session_charts.py  viz_brain.py
eval/results/: ablation_reasoning.txt  analyze_balanced.txt  brain_run.json  component_embeddings.npy  component_forecast.txt  component_labels.npy  component_records.json  debug_run.json  eval_dev_learning.json  eval_learn.json  eval_v3_run.json  extensive_run.json  fires_run.json  gen_gsm8k.txt  general_run.json  generalize_balanced.txt  haiku_intensive_run.json  hard_haiku_run.json  hard_run.json  intervention_policy.txt  large_run.json  learned_repr.txt  mvp_forecast_controlled.txt  project_run.json  real_world_run.json  trajectories.json  (+5 more)
tests/: test_brain.py  test_forecast.py  test_pipeline.py  test_trajectory.py
trace_use/: __init__.py  agents.py  brain.py  config.py  display.py  forecast.py  motif_store.py  pipeline.py  tools.py  trajectory.py
trace_use.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
