[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-use"
version = "0.1.0"
description = "Forecast agent failure from execution traces — spend retries and verification only where needed."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40",
    "openai>=1.40",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.7",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
bench = ["datasets>=2.18"]
dev   = ["pytest>=8.0"]

[tool.setuptools]
py-modules = [
    "pipeline",
    "brain",
    "forecast",
    "agents",
    "display",
    "tools",
    "_util",
]
